syntax = "proto3";

package collection;

service CollectionsController {
    rpc FindOne (CollectionById) returns (ResponseDataCollectionFullInfo);
    rpc FindMany (CollectionsOnPage) returns (ResponseRepeatedData);
    rpc PostCollection (CollectionDto) returns (ResponseDataCollection);
    rpc UpdateOne (Collection) returns (ResponseDataCollection);
    rpc DeleteOne (CollectionById) returns (ResponseDataCollectionDeleted);
}


message ResponseRepeatedData {
    string status = 1;
    string message = 2;
    repeated Collection data = 3;
    string error = 4;
}

message CollectionById {
    string id = 1;
}

message Collection {
    string id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
}

message CollectionFullInfo {
    string id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message CollectionDto {
    string name = 1;
    string description = 2;
    string image = 3;
}

message CollectionsOnPage {
    int32 page = 1;
    int32 items_per_page = 2;
}

message DeleteResponse {
    string message = 1;
}

message ResponseDataCollection {
    string status = 1;
    string message = 2;
    oneof response {
        Collection data = 3;
        string error = 4;
    }
}

message ResponseDataCollectionFullInfo {
    string status = 1;
    string message = 2;
    oneof response {
        CollectionFullInfo data = 3;
        string error = 4;
    }
}

message ResponseDataCollectionDeleted {
    string status = 1;
    string message = 2;
    oneof response {
        DeleteResponse data = 3;
        string error = 4;
    }
}
